# r47_android

./: .gitignore  Makefile  README.md  RELEASE_NOTES.md  build_android.sh  dist.sh  sync_public.sh
.github/workflows/: android-ci.yml  linux-ci.yml  windows-ci.yml
android/: REBUILD_MASTER_GUIDE.md  build.gradle  collect_packaging_evidence.sh  compute_staged_native_inputs.sh  generate_staged_native_metadata.sh  generate_windows_runtime_notice_artifacts.sh  prepare_native_build_inputs.sh  settings.gradle  stage_native_sources.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/c47/: c47.h  defines.h  keyboard.c  keyboard.h  screen.c  softmenus.c  timer.c
android/app/src/main/cpp/c47-android/: android_helpers.c  android_mocks.h  jni_bridge.h  jni_display.c  jni_input.c  jni_lifecycle.c  jni_storage.c  native-lib.c
android/app/src/main/cpp/c47-android/hal/: audio.c  gui.c  io.c  lcd.c
android/app/src/main/cpp/c47/c47Extensions/: addons.c
android/app/src/main/cpp/c47/programming/: input.c  lblGtoXeq.c
android/app/src/main/cpp/r47_android/: jni_bridge.h  jni_input.c  jni_lifecycle.c  jni_registration.c
android/compat/mini-gmp-fallback/: README.md
android/compliance/repo-notices/: components.json
android/docs/: README.md
android/docs/dev/: 10-build-and-source-layout.md  20-kotlin-shell-architecture.md  30-native-core-and-jni.md  40-ui-rendering-and-gtk-mapping.md  90-official-references.md  README.md
android/gradle/: libs.versions.toml
scripts/: build_android.sh  upstream.sh
scripts/android/: compute_staged_native_inputs.sh  generate_windows_runtime_notice_artifacts.sh  prepare_native_build_inputs.sh  stage_native_sources.sh
src/c47/: screen.c
src/c47/programming/: input.c  lblGtoXeq.c
subprojects/: gmp-6.2.1.wrap
tools/: upstream.sh
(+24 files in other folders)
